--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 		<input type="text" name="F.name" id="f.name" placeholder="Your Father's Name" required>
 		
 		<input type="text" name="phone" id="phone" placeholder="Enter Number for recharge">
+			<select class="opt">
+	    	<option>Jio</option>
+	    	<option>Airtel</option>
+	    	<option>Vi</option>
+	    	<option>BSNL</option>
+	    	<option>Idea</option>
+	    </select>
 		<button type="submit">Submit</button>
 	    </div>
 	</form>
